# pico-projects

./: README.md
keypad/: CMakeLists.txt  graphics.c  keypad.c  syscalls.c
kitt/: Adafruit_ST7735.h  CMakeLists.txt  kitt.c  tft_stdout.c
lcd/: Adafruit_ST7735.c  CMakeLists.txt  README.md  lcd.c
music/: CMakeLists.txt  music.c  music_framework.c  tft_stdout.h
pong/: CMakeLists.txt  pong.c
wifi/: CMakeLists.txt  wifi.c
worm-game/: Adafruit_ST7735.c  CMakeLists.txt  debug.c  debug.h  field.c  field.h  field_internal.h  field_public.c  field_public.h  green.c  green.h  keypad.c  keypad.h  main.c  moves.h  player.c  player.h
